--- a/README
+++ b/README
@@ -27,3 +27,16 @@ step 9
 2nd user	- vi story_y
 		- git add story_y
 		- git commit -a -m 'add story_y'
+
+step 10
+1st user	- git checkout story_y
+		- git pull
+		- update README
+		- update story_y.txt
+		- git commit -a -m 'add changes for story y'
+		- git push origin story_y
+		- do pull request on github
+======
+2nd user	- reviews pull request
+		- approves
+		- does the merge and closes the pull request
